peer feedback popup added and small javascript improvments

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -725,6 +725,9 @@ body {
     color: #333;
     text-align: center;
     text-decoration: none;
+    &:hover {
+      color: #333;
+    }
 
     div {
       height: 40px;
