--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -107,7 +107,7 @@
         <div class="links">
           <div>
             <%= link_to("Interview Application", "https://docs.google.com/forms/d/e/1FAIpQLScDJe80_E686pG1L7R5w-84HHZcotFmuBSyQV5rqUB2jUQTag/viewform", target: "_blank") %><br>
-            <%= link_to("Editor Application", "/applications/editor") %>
+            <%= link_to("Editor Application", "/applications/editor", target: "_blank") %>
           </div>
         </div>
         <br>
