--- a/app/views/application_mailer/welcome_email.html.erb
+++ b/app/views/application_mailer/welcome_email.html.erb
@@ -23,7 +23,7 @@
         and you can log into your account at <%= link_to "https://www.theteenmagazine.com/login", "https://www.theteenmagazine.com/login" %>.</li>
     </ol>
     <p>Once you've been accepted into the Facebook group, please write a short post introducing yourself. Please check back on this group often as this is the number one way to connect with other writers from The Teen Magazine.</p>
-    <p>When you're ready to start your first article, go to your Dashboard and click on “New Post.” Before submitting
+    <p>When you're ready to start your first article, go to your Dashboard and click on “Pitch an Article”. Before submitting
       an article for approval, please read the instructions on “Writing the perfect article” found on your dashboard.</p>
     <p>Please let us know if you have any questions! We look forward to reading your first submitted article!</p>
     <p>Best Regards,<br/>Editor Team</p>
