--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -19,6 +19,9 @@
     <% if notice %>
       <p class="notice"><%= notice %></p>
     <% end %>
+    <% if @comment %>
+      <%= render "posts/draft_feedback" %>
+    <% end %>
     <div id="site-wrapper">
       <%= render "layouts/partials/slide-in-menu" %>
       <div id="site-canvas">
