--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -93,7 +93,7 @@
             <ul class="list-group list-group-flush whats-new">
               <% @pitches.each do |pitch| %>
                 <li class="list-group-item">
-                  <% @profile_img = pitch.user.profile.exists? ? image_tag(pitch.user.profile.url(:square), :class => "profile_img_small") : image_tag("profile_image", :class => "profile_img_small") %>
+                  <% @profile_img = pitch.user.profile.exists? ? image_tag(pitch.user.profile.url(:square), :class => "profile_img_small") : image_tag("profile_image.jpg", :class => "profile_img_small") %>
                   <%= link_to(@profile_img, pitch.user) %>
                   <div><%= link_to(pitch.user.full_name, pitch.user, class: "link_nrml") %> pitched <%= link_to(pitch.title, pitch, class: "link_nrml") %>
                   <br><span class="date_ago"><%= time_ago_in_words(pitch.created_at) %> ago</span></div>
