fixed banner onboarding image

--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag "banner_onboarding", id: "banner_writing" %>
+<%= image_tag "banner_onboarding.jpg", id: "banner_writing" %>
 <div class="apply_wrapper">
   <h2>The Teen Magazine · September 2020 Issue</h2>
     <br>
