--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag "banner_onboarding", id: "banner_writing" %>
+<%= image_tag "banner_onboarding.jpg", id: "banner_writing" %>
 <div class="skinny_wrapper team">
   <h1>About Us</h1>
   <p>
