--- a/app/views/users/onboarding.html.erb
+++ b/app/views/users/onboarding.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag "banner_onboarding", id: "banner_writing" %>
+<%= image_tag "banner_onboarding.jpg", id: "banner_writing" %>
 <div class="skinny_wrapper onboarding">
   <h1>Welcome to The Teen Magazine Writer Team!</h1>
   <p>Please complete the onboarding process.</p>
