--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag "banner_onboarding", id: "banner_writing" %>
+<%= image_tag "banner_onboarding.jpg", id: "banner_writing" %>
 <div class="skinny_wrapper">
   <div class="contact">
     <h3>PARTNER WITH US</h3>
