--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -35,7 +35,7 @@ pintrk('track', 'pagevisit');
     <br />
     <span>Email</span>
     <%= f.email_field :email, required: true %>
-    <p style="margin-top: 0px;">Please write one to two paragraphs introducing yourself and describing why you would be a good fit for The Teen Magazine writer team. Please include links to any previously published work/blog(s) if applicable.</p>
+    <p style="margin-top: 0px;">Please write a cover letter introducing yourself and describing why you would be a good fit for The Teen Magazine writer team. Please include links to any previously published work/blog(s) if applicable.</p>
     <%= f.text_area :description, required: true %>
     <br />
     <%= f.hidden_field :nickname %>
