--- a/app/views/posts/_draft.html.erb
+++ b/app/views/posts/_draft.html.erb
@@ -52,7 +52,7 @@ blockquote {
               <div id="selectable_content" class="post_content">
                   <%= markdown @post.content %>
               </div>
-              <% if current_user && (current_user.id == @post.user_id || (@post.collaboration.include? current_user.email) || current_user.admin?) %>
+              <% if current_user && (current_user.id == @post.user_id || (@post.collaboration&.include? current_user.email) || current_user.admin?) %>
                 <div id="admin_links">
                   <%= link_to "Edit Article", edit_post_path(@post) %>
                   <% if current_user && (current_user.id == @post.user_id || current_user.admin) %>
