--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -83,18 +83,18 @@
     <p>
       To upload your own image, click on the image symbol boxed in green. Click on the "Upload" tab.
     </p>
-    <%= image_tag "uploadimage1", class: "image" %>
+    <%= image_tag "uploadimage1.png", class: "image" %>
     <p>
       Then click on "Choose File" and choose an image from your computer.
     </p>
-    <%= image_tag "uploadimage2", class: "image" %>
+    <%= image_tag "uploadimage2.png", class: "image" %>
     <p>
       <b>IMPORTANT!</b> You need to click on "Send it to the Server" before clicking "OK". This can take up to 10 seconds. It should automatically reroute you to "Image Info". The larger the image, the more time it takes.
     </p>
     <p>
       <b>"Image source URL is missing"</b>: If you get this error, it means that you did not click on "Send it to the Server", or your image is too large to be uploaded.
     </p>
-    <%= image_tag "uploadimage3", class: "image" %>
+    <%= image_tag "uploadimage3.png", class: "image" %>
   </div>
 
   <hr />
