fixed images for heroku

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -152,7 +152,7 @@ html, body {
 }
 
 #apply_image {
-  background-image: url("writer.jpg");
+  background-image: image-url("writer.jpg");
   background-size: cover;
   background-position: center center;
   height: 0;
