--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -148,19 +148,19 @@
     }
   }
   .G1 {
-    background-image: url("topic.jpeg");
+    background-image: image-url("topic.jpeg");
   }
   .G2 {
-    background-image: url("scarf.jpeg");
+    background-image: image-url("scarf.jpeg");
   }
   .G3 {
-    background-image: url("writing.jpg");
+    background-image: image-url("writing.jpg");
   }
   .G4 {
-    background-image: url("glasses.jpeg");
+    background-image: image-url("glasses.jpeg");
   }
   .G5 {
-    background-image: url("photo.jpeg");
+    background-image: image-url("photo.jpeg");
   }
 }
 
