--- a/app/views/comments/update.js.erb
+++ b/app/views/comments/update.js.erb
@@ -1,19 +1,3 @@
-<% if @parent.present? %>
-  <% if @parent.comments.where.not(id: @comment.id).present? %>
-    document.querySelector('#comment_<%= @parent.comments.where.not(id: @comment.id).last.id %>').insertAdjacentHTML('afterend', '<%= escape_javascript(render @comment) %>') ;
-  <% else %>
-    document.querySelector('#reply_<%= @parent.id %>').insertAdjacentHTML('afterbegin', '<%= escape_javascript(render @comment) %>');
-  <% end %>
-  $('.toggle_<%= @parent.id %>').text("Reply (<%= @parent.comments.count %>)");
-  $('.submit_<%= @parent.id %>').addClass("disabled");
-  $('.comment_val_<%= @parent.id %>').val("");
-<% else %>
-  document.querySelector('#list-group-comments').insertAdjacentHTML('afterbegin', '<%= escape_javascript(render @comment) %>') ;
-  $('.submit_0').addClass("disabled");
-  $('.comment_val_<%= @comment.id %>').val("");
-  $('.comment_val_0').val("");
-  <% if @comment.response_to.present? %>
-    $('.comment_field_modal').val("");
-    $('#dismiss-modal').click();
-  <% end %>
-<% end %>
+document.getElementById('<%= dom_id(@comment, "form_inline") %>').remove()
+document.getElementById('<%= dom_id(@comment) %>').innerHTML = "<%= j render @comment %>"
+$('#<%= dom_id(@comment) %>').removeClass('d-none');
