--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -43,18 +43,18 @@ pintrk('track', 'pagevisit');
     <br />
     <span>Email Address</span>
     <%= f.email_field :email, required: true, placeholder: "Email" %>
-    <p style="margin-top: 0px;">Please submit a cover letter describing why you want to write for The Teen Magazine and why you would be a good fit for our team (300-500 words). Include links to any previously published articles if applicable.</p>
+    <p style="margin-top: 0px;">Please submit a cover letter describing why you want to join The Teen Magazine and what you hope to gain from being a part of, and contributing to, our writer community. Include links to any previously published articles if applicable (150-250 words).</p>
     <%= f.text_area :description, required: true, placeholder: "Write your cover letter here..." %>
     <br />
     <span class="d-block">Upload your resume (pdf):</span>
     <%= f.file_field :resume %>
-    <span class="d-block mt-4">Upload a sample of your writing that demonstrates your writing proficiency and style. Please only include a previously-written essay or blog post. Poems and fictional stories will not be considered. (pdf)</span>
+    <span class="d-block mt-4">Upload a sample of your writing that demonstrates your writing proficiency and style. This should be a previously-written essay, blog post, or other published work. Poems and fictional stories will not be considered (pdf):</span>
     <%= f.file_field :sample_writing %>
     <%= f.hidden_field :nickname %>
     <div class="btn_cntnr pb-0 mt-4 pt-2" style="float: none !important;"><%= f.submit 'Submit Application', class: "newpost--new--profile mr-0" %></div>
   <% end %>
   <i style="opacity: 50%;" class="d-block">
-    Applications are accepted on a rolling basis. If accepted, you will receive an email from our team of editors within 48 hours. Please note that writers and editors are not paid and instead write for us
+    Applications are accepted on a rolling basis. If accepted, you will receive an email from our team of editors within 72 hours. Please note that writers and editors are not paid and instead write for us
     to gain applicable experience and mentorship in the editorial industry. Read more about us <%= link_to("here", "/about-us", :class => "link_nrml underline") %>.
   </i>
   <br>
