--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -161,12 +161,12 @@
       border: none;
       padding: 0;
       float: right;
-      background-image: url("https://s3.amazonaws.com/media.theteenmagazine.com/post_comment.png");
-      background-size: contain;
-      background-repeat: no-repeat;
       margin-bottom: 10px;
       &:hover {
         cursor: pointer;
+      }
+      &:focus {
+        outline: none;
       }
     }
     i {
